--- a/Simon Game/style.css
+++ b/Simon Game/style.css
@@ -1,17 +1,17 @@
 body{
     text-align: center;
+    background: linear-gradient(4deg, #CDC1FF, #F5F0CD);
 }
 
 .btn{
-    height: 150px;
-    width:  150px;
+    height: 250px;
+    width:  250px;
     border: 4px solid black;
-    border-radius: 18px;
-    margin: 2rem;
+    font-size: x-large;
+    /* border-radius: 18px; */
     /* margin: 20px; */
     align-content: center;
 }
-
 
 .wrong{
     background-color: #FF2929;
@@ -23,20 +23,23 @@ body{
 }
 
 .green{
+    border-top-left-radius: 99%;
     background-color: #36BA98;
 }
 
 .red{
+    border-bottom-left-radius: 99%;
     background-color: #E4003A;
 }
 
 .orange{
     background-color: #FC8F54;
+    border-top-right-radius: 99%;
 }
 
 .purple{
+    border-bottom-right-radius: 99%;
     background-color: #6D67E4;
-    /* color: purple; */
 }
 
 .flash{
